k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fincommerce-backend
  labels:
    app: fincommerce
    component: backend
spec:
  type: ClusterIP
  selector:
    app: fincommerce
    component: backend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: fincommerce-analytics
  labels:
    app: fincommerce
    component: analytics
spec:
  type: ClusterIP
  selector:
    app: fincommerce
    component: analytics
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
