k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fincommerce-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.fincommerce.io
        - analytics.fincommerce.io
      secretName: fincommerce-tls
  rules:
    - host: api.fincommerce.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fincommerce-backend
                port:
                  number: 80
    - host: analytics.fincommerce.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fincommerce-analytics
                port:
                  number: 80
